maj couleur + tool tips

--- a/titreLegende.html
+++ b/titreLegende.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 </head>
-	<hr>
-	<h1>Les résultats</h1>
-	<hr>
-	<p class="chapeau">Survolez les communes avec la souris pour afficher les 3 partis arrivés en tête lors des élections européennes de 2024.</p>
-	<p class="consigne">- Cliquez sur un bouton pour modifier l'affichage des partis sur la carte. -</p>
-	<div>
-		<div id="controls">
-			<span id="button1" class="bouttonDefaut"></span>
-			<span id="button2"></span>
-			<span id="button3"></span>
-		</div>
-		<div id="legende">
-			<span class="tooltippuce tooltipinfosupp code3"></span><span class="legende">Reconquête</span>
-			<span class="tooltippuce tooltipinfosupp code4"></span><span class="legende">La France insoumise</span>
-			<span class="tooltippuce tooltipinfosupp code5"></span><span class="legende">Rassemblement national</span><br/>
-			<span class="tooltippuce tooltipinfosupp code6"></span><span class="legende">Europe Ecologie Les Verts</span>
-			<span class="tooltippuce tooltipinfosupp code11"></span><span class="legende">Besoin d'Europe</span>
-			<span class="tooltippuce tooltipinfosupp code18"></span><span class="legende">Les Républicains</span>
-			<span class="tooltippuce tooltipinfosupp code27"></span><span class="legende">Parti socialiste, Place publique</span>
-			<span class="tooltippuce tooltipinfosupp code33"></span><span class="legende">Parti communiste français</span>
-			<span class="tooltippuce tooltipinfosupp code50"></span><span class="legende">Autre</span>
-		</div>
+<hr>
+<h1>Les résultats</h1>
+<hr>
+<p class="chapeau">Survolez les communes avec la souris pour afficher les 3 partis arrivés en tête lors des élections
+	européennes de 2024.</p>
+<p class="consigne">- Cliquez sur un bouton pour modifier l'affichage des partis sur la carte. -</p>
+<div>
+	<div id="controls">
+		<span id="button1" class="bouttonDefaut"></span>
+		<span id="button2"></span>
+		<span id="button3"></span>
 	</div>
+	<div id="legende">
+		<span class="tooltippuce tooltipinfosupp code4"></span><span class="legende">La France insoumise</span>
+		<span class="tooltippuce tooltipinfosupp code33"></span><span class="legende">Parti communiste français</span>
+		<span class="tooltippuce tooltipinfosupp code27"></span><span class="legende">Parti socialiste</span>
+		<span class="tooltippuce tooltipinfosupp code6"></span><span class="legende">Europe Ecologie</span>
+		<span class="tooltippuce tooltipinfosupp code11"></span><span class="legende">Renaissance</span>
+		<span class="tooltippuce tooltipinfosupp code18"></span><span class="legende">Les Républicains</span>
+		<span class="tooltippuce tooltipinfosupp code5"></span><span class="legende">Rassemblement national</span><br />
+		<span class="tooltippuce tooltipinfosupp code3"></span><span class="legende">Reconquête</span>
+		<span class="tooltippuce tooltipinfosupp code50"></span><span class="legende">Autre</span>
+	</div>
+</div>
+
 </html>
